# libzorpll

./: .gitignore  .gitmodules  .travis.yml  COPYING  Makefile  Makefile.am  Makefile.in  README  VERSION  aclocal.m4  autogen.sh  balabit-unix-build  balabit-vs-build  config.status  configure  configure.ac  configure.in  dist.conf  dist.conf.in  libtool  libzorpll_3.9.1.3.orig.tar.gz.delta  libzorpll_3.9.1.3.orig.tar.gz.id  libzorpll_3.9.4.1.orig.tar.gz.delta  libzorpll_3.9.4.1.orig.tar.gz.id  libzorpll_6.0.10.0.orig.tar.gz.delta  libzorpll_6.0.10.0.orig.tar.gz.id  libzorpll_6.0.6.0.orig.tar.gz.delta  libzorpll_6.0.6.0.orig.tar.gz.id  libzorpll_6.0.8.0.orig.tar.gz.delta  libzorpll_6.0.8.0.orig.tar.gz.id  libzorpll_7.0.1.0~alpha1.orig.tar.gz.delta  libzorpll_7.0.1.0~alpha1.orig.tar.gz.id  libzorpll_7.0.4.0.orig.tar.gz.delta  libzorpll_7.0.4.0.orig.tar.gz.id  zorplibll.pc  zorplibll.pc.in  zorplibll.spec  zorplibll.spec.in  zorpll.pc.in
.circleci/: config.yml
debian/: .gitignore  Makefile  Makefile.am  Makefile.in  TODO  changelog  control  control.in  copyright  gbp.conf  libzorpll-6.0-10-dev.install  libzorpll-6.0-6.shlibs  libzorpll-6.0-8.install  libzorpll-7.0-1-dev.install  libzorpll-7.0-1.install  libzorpll-7.0-1.postinst  libzorpll-dev.install  libzorpll.shlibs.in  libzorpll.shlibs.in.in  libzorpll3.9-1.config  libzorpll3.9-1.postinst  libzorpll3.9-1.postrm  libzorpll3.9-1.shlibs  libzorpll3.9-1.templates  libzorpll5.0-0.shlibs  libzorpll6.0-10.shlibs  libzorpll6.0-11.shlibs  libzorpll6.0-12.postinst  libzorpll6.0-12.shlibs  libzorpll6.0-6.shlibs  libzorpll6.0-8.shlibs  libzorpll6.0-9.shlibs  libzorpll6.0-dev.install  libzorpll7.0-1.install  libzorpll7.0-1.shlibs  libzorpll7.0-dev.install  not-installed  rules  rules.in  watch
debian/patches/: 0001-compile_problems2.patch  0002-Fix-compile-error.patch  0002-compile_problems3.patch  0003-Removed-Compile-date-field-because-it-prevent-reliab.patch  0004-Fixed-no-caps-option-handling.patch  compile_problems2  compile_problems3  series
debian/po/: POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot
rpm/: libzorpll-5_0-0.spec  libzorpll-6_0-11.spec  libzorpll-7_0-1.spec  libzorpll-7_0-2.spec  libzorpll-7_0-3.spec  libzorpll-7_0-4.spec  libzorpll.spec  libzorpll_fix-lto.patch
scripts/: Makefile  Makefile.am  Makefile.in
solbuild/: Makefile  Makefile.in  pkginfo.dev  pkginfo.lib  rules.conf  rules.conf.in
src/: Makefile  Makefile.am  Makefile.in  blob.c  blob.cc  cap.cc  code.c  code.cc  code_base64.cc  code_cipher.cc  code_gzip.cc  connect.c  connect.cc  crypt.cc  error.cc  headerset.c  headerset.cc  inetaddress.cc  io.c  io.cc  libzorpll.def  libzorpll.rc  libzorpll.rc.in  listen.c  listen.cc  log.c  log.cc  makefile.msc  memtrace.c  memtrace.cc  misc.c  misc.cc  packetbuf.c  packetbuf.cc  poll.cc  process.c  process.cc  random.cc  registry.c  registry.cc  (+35 more)
src/zorp/: Makefile  Makefile.am  Makefile.in  blob.h  cap.h  code.h  code_base64.h  code_cipher.h  code_gzip.h  compat.h  connect.h  error.h  headerset.h  io.h  listen.h  log.h  memtrace.h  misc.h  packetbuf.h  poll.h  process.h  random.h  registry.h  sockaddr.h  socket.h  socketsource.h  source.h  ssl.h  stackdump.h  stream.h  streamblob.h  streambuf.h  streamfd.h  streamgzip.h  streamline.h  streamssl.h  streamtee.h  thread.h  win32_reg.h  zcp.h  (+6 more)
src/zorp/zorpll/: Makefile.am  blob.h  cap.h  code.h  code_base64.h  code_cipher.h  code_gzip.h  connect.h  error.h  headerset.h  inetaddress.h  io.h  listen.h  log.h  misc.h  packetbuf.h  poll.h  process.h  random.h  sockaddr.h  socket.h  socketsource.h  source.h  ssl.h  stackdump.h  stream.h  streamblob.h  streambuf.h  streamfd.h  streamgzip.h  streamline.h  streamssl.h  streamtee.h  string.h  thread.h  win32_reg.h  zcp.h  zmap.h  zobject.h  zorplib.h  (+4 more)
tests/: Makefile  Makefile.am  Makefile.in  randtest.c  randtest.cc  test_base64.c  test_base64.cc  test_blob.c  test_blob.cc  test_codecipher.c  test_codecipher.cc  test_codegzip.c  test_codegzip.cc  test_conns.c  test_conns.cc  test_inetaddress.cc  test_pktbuf.c  test_pktbuf.cc  test_portrandom.cc  test_random.cc  test_readline.c  test_readline.cc  test_registry.c  test_registry.cc  test_sockaddr.cc  test_ssl.c  test_ssl.cc  test_streams.c  test_streams.cc  test_valid_chars.cc  test_zcrypt.cc
tgz2build/: Makefile  Makefile.am  Makefile.in  libzorpll-dev.files.in  libzorpll6.0-dev.files  libzorpll7.0-dev.files  rules  tgz2deps
tgzbuild/: Makefile  Makefile.in
winbuild/: Makefile  Makefile.am  Makefile.in  build.bat  libzorpll-dev.files  libzorpll-dev.files.in  libzorpll3.9-1-dbg.files  libzorpll6.0-dev.files  libzorpll7.0-dev.files  win2deps
winbuild/gensrc/: Makefile.am  zorplibconfig.h
winbuild/win32/: Makefile.am
winbuild/win32/vs10/: Makefile.am  copy_generated_src.bat  libzorpll.props  libzorpll.sln  libzorpll.vcxproj  libzorpll.vcxproj.filters  libzorpll.vcxproj.in
