ZORP_H = \
	cap.h streamssl.h log.h memtrace.h misc.h streamline.h sockaddr.h \
	io.h ssl.h stream.h thread.h \
	listen.h connect.h source.h zorplib.h poll.h zorplibconfig.h \
	registry.h packetbuf.h socket.h streambuf.h socketsource.h \
	random.h error.h streamfd.h stackdump.h zobject.h process.h \
	streamgzip.h blob.h streamblob.h streamtee.h \
	code_base64.h code_cipher.h code_gzip.h	code.h \
	headerset.h zcp.h zurlparse.h compat.h

pkgincludedir=@includedir@/zorp-@LIBZORPLL_LT_RELEASE@/zorpll
pkginclude_HEADERS = $(ZORP_H)
